# cocotbext-interface

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
cocotbext/interface/: __init__.py  interface.py  memorymappedinterface.py  streaminterface.py  utils.py
cocotbext/interface/prototypes/: __init__.py  memorymappedinterface.py  streaminterface.py
tests/: test_interface.py  test_utils.py
