[project]
name = "cocotbext-interface"
description = "System Verilog style interface class for connecting Cocotb to DUT"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Rasmus Grøndahl Olsen", email = "simplhdl@gmail.com" },
]
authors = [
  { name = "Rasmus Grøndahl Olsen", email = "simplhdl@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Framework :: Cocotb",
]

dynamic = [ "version" ]
dependencies = [
    "cocotb>=2.0.1",
]

[tool.setuptools.dynamic]
version = { attr = "cocotbext.interface.__version__" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
